# islands

./: .gitignore  Dockerfile  README.md  graph.py  groceries.py  package-lock.json  package.json  weather.py
bitbang/: debug.js  epson-projector.js  helpers.js  index-2.js  index.js  mitsubishi-ac.js  nec.js  package-lock.json  package.json  pulse.js  raw.js  rewrite.js  serial.js
cli/: index.js  package-lock.json  package.json
config/: config.json  cutie.service  islands.service  m-cutie-t.service  state.json
fs-server/: index.mjs  package-lock.json  package.json
islands/: README.md  ac.py  air_conditioning.py  entry.py  island.py  islands.py  module.py  mornings.py  printer.py  pyproject.toml  util.py  weather-station.py  weather.py  weather_station.py
islands-rewrite/: README.md  config.json  config.lua  index.js  island.pm2.config.cjs  island.pm2.config.js  islands.service  mqtt.js  package-lock.json  package.json  process.js  shadow.js  test-thermal-printer.js  weather-and-light.py
islands/scripts/: test.sh
mqtt-islands/: .gitignore  README.md  config.json  index.js  islands.service  package-lock.json  package.json  state.json
proof-of-concepts/: core.py  graph.py  groceries.py  sample.md  thermal-printer.py
provisioner/: README.md  conf  config  install-node.sh  iot-cp.mjs  package-lock.json  package.json  provision.mjs  rsync-exclude.txt
server/: README.md  app.html  index.js  package-lock.json  package.json
src/: cli-entrypoint.js  index.js  process.js
switchbot/: index.js  package-lock.json  package.json
web-ui/: .gitignore  Dockerfile  (+5 more)
(+109 files in other folders)
