[tool.poetry]
name = "islands"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydash = "^4.9.3"
awscrt = "0.13.6"
awsiotsdk = "^1.5.7"
adafruit-circuitpython-thermal-printer = "^1.3.3"
adafruit-circuitpython-bme680 = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
